Update gitconfig to disable fast forward on merge

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,8 @@
 	template = /Users/jo/.stCommitMsg
 [pull]
     rebase = true
+[merge]
+	ff = false
 [rebase]
 	autosquash = true
 [remote "origin"]
